# MCNP-Input-Reader

./: .gitignore  README.md  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: CI.yml
examples/: Example.ipynb  cells.csv  input.i
mcnp_input_reader/: MCNPCell.py  __init__.py  cell.py  exceptions.py  fill_transformation.py  main.py  material.py  parallelizer.py  store.py  surface.py  transformation.py
mcnp_input_reader/util/: lines.py  list_of_tuples.py
tests/: test_mcnp_input_reader.py
