[tool.poetry]
name = "mcnp_input_reader"
version = "0.1.2"
description = "MCNP Input reader"
authors = ["gmariano <giovanni.mariano@enea.it>"]
readme = "README.md"
homepage = "https://github.com/ENEA-Fusion-Neutronics/MCNP-Input-Reader.git"
repository = "https://github.com/ENEA-Fusion-Neutronics/MCNP-Input-Reader.git"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
